Version 7.3.0
- Allow `__attribute__((packed))` on C structs
- Make Spin2 structs actually packed
- Fix parsing of `[++]` and `[--]` as pre operators
- Fixed error reporting around __builtin_printf

Version 7.2.1
- Use _rxpin as repository to hold frequency for gbrk debug
- Fixed "short unsigned" declarations in C

Version 7.2.0
- Add _[n] syntax for skipping assignments in Spin2
- Added TASKHLT pseudo-variable
- Fixed usage of sub-objects in Spin2
- Fixed compilation of Spin1 files containing a `_` constant (thanks, Ada!)
- Fixed a long standing memory evaluation order bug

Version 7.1.2
- Fix namespace usage during initial address assignment (so labels in namespaces work in ORG/RES/FIT etc.)
- Fix some issues around array address calculations in Spin2
- Fix struct usage in DAT sections

Version 7.1.1
- Fixed using struct names for return values and parameters in Spin2
- Improved code generation for small structs containing arrays
- Improved some forward branches in P1 LMM mode

Version 7.1.0
- Added _rxpoll() to check for character without a timeout
- Reverted _rx* functions to no longer use 28 bit internal buffer; this is less resilient to P2 side timing changes, but better if PC timing is uncertain
- Added new Spin2 @\"string" for strings with embedded C-style escapes
- Added DITTO to duplicate code/data in Spin2 assembly
- Added some of the upcoming Spin2 v51 float functions
- Added %namesp feature for DAT namespaces
- Made it possible to add `: structname` to method pointer usage in Spin2
- Many internal changes to support DITTO and future assembly work
- Updated -gbrk debug code (thanks Ada)
- Use cluster size for stat() st_blksize on FAT32

Version 7.0.5
- Fixed internal handle usage to avoid conflicts with BASIC hard-coded handles
- Fixed potential inline register re-use bug (thanks to Ada)

Version 7.0.4
- Added `-Opeek-args` optimization flag (the optimization was always there, this provides a way to disable it)