@@ -1,8 +1,10 @@
 Version 7.3.0
 - Allow `__attribute__((packed))` on C structs
+- Add `-Wbuiltin-fallback` for warning when builtin functions must call libraries
 - Make Spin2 structs actually packed
 - Fix parsing of `[++]` and `[--]` as pre operators
 - Fixed error reporting around __builtin_printf
+- Updated __builtin_printf to handle %X
 
 Version 7.2.1
 - Use _rxpin as repository to hold frequency for gbrk debug
